--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: 'Georgia', serif;
   background: url('https://www.transparenttextures.com/patterns/paper-fibers.png'), #f5f2e9;
+  background-size: contain;
   display: flex;
   flex-direction: column;
   align-items: center;
